<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?homeAsUpIndicator"
            app:title="About" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appVersionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Thank You -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/acknowledgement"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/title_acknowledgement" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Privacy Policy -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/privacy_policy"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/privacy_policy" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Buy a Coffee -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/donate"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/app_sponsorship"
                app:drawableStartCompat="@drawable/ic_coffee" />

        </com.google.android.material.card.MaterialCardView>

        <!-- App Rating -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rate"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/rating_header"
                app:drawableStartCompat="@drawable/ic_thumbs_up" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Email Feedback -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/feedback"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/feedback_header"
                app:drawableStartCompat="@drawable/ic_feedback" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Linkedin Link -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/linkedin"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/linkedin"
                app:drawableStartCompat="@drawable/ic_linkedin" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Github Link -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/github"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/github"
                app:drawableStartCompat="@drawable/ic_github" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Instagram Link -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/instagram"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/instagram"
                app:drawableStartCompat="@drawable/ic_camera" />

        </com.google.android.material.card.MaterialCardView>


        <!-- Open Source Licenses -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/license"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/licenses"
                app:drawableStartCompat="@drawable/ic_publications" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Device Info -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/device"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/device_info"
                app:drawableStartCompat="@drawable/ic_phone" />

        </com.google.android.material.card.MaterialCardView>

        <!-- Epubs Product Changes -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/epubsChanges"
            style="@style/AboutCard">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AboutItem"
                android:text="@string/epubs_notice"
                app:drawableStartCompat="@drawable/ic_change_log" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>