<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_featured">

    <fragment
        android:id="@+id/navigation_featured"
        android:name="com.drewcodesit.afiexplorer.ui.FeaturedFragment"
        android:label="@string/app_featured"
        tools:layout="@layout/fragment_featured" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.drewcodesit.afiexplorer.ui.HomeFragment"
        android:label="@string/app_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.drewcodesit.afiexplorer.ui.FavoriteFragment"
        android:label="@string/app_faves"
        tools:layout="@layout/fragment_favorites" />

</navigation>
