<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">

        <!--
        Loader -->
        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="12dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <!-- Featured
        Recyclerview -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_pub_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize">
        </androidx.recyclerview.widget.RecyclerView>

        <!-- Recent
        Updates Header -->
        <TextView
            android:id="@+id/featured_updated_header"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/recently_updated_header"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?colorControlNormal"
            android:layout_below="@id/single_pub_rv" />

        <!-- Recent
        Updates Subheader -->
        <TextView
            android:id="@+id/featured_updated_subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/featured_updated_header"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:text="@string/recently_updated_subheader"
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- See All
        Text Button -->
        <TextView
            android:id="@+id/view_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/featured_updated_header"
            android:layout_below="@id/single_pub_rv"
            android:fontFamily="@font/roboto"
            android:text="@string/see_all"
            android:textSize="20sp"
            android:textColor="@color/bottom_nav_icon"/>

        <!-- Recently Updated
        Recyclerview-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recents_rv"
            android:layout_below="@id/featured_updated_subheader"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>


        <!-- Placeholder
        View -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/placeholder_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_below="@id/featured_updated_subheader"
            android:clickable="false"
            android:visibility="visible"
            android:focusable="false"
            style="@style/PlaceholderCard">
        </com.google.android.material.card.MaterialCardView>

        <!-- Quick Links
        Header -->
        <TextView
            android:id="@+id/quick_links_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_links_header"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?colorControlNormal"
            android:layout_below="@id/placeholder_card" />

        <!-- Link
        to Epubs -->
        <TextView
            android:id="@+id/quick_link_epub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quick_links_header"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/epubs_summary"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <!-- Link
        to AF Doctrine -->
        <TextView
            android:id="@+id/quick_link_doctrine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quick_link_epub"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/doctrine_summary"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <!-- Link
        to AF Resilience -->
        <TextView
            android:id="@+id/quick_link_resilience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quick_link_doctrine"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/resilience_summary"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <!-- Link
        to feedback -->
        <TextView
            android:id="@+id/quick_link_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quick_link_resilience"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/feedback_header"
            android:textColor="#3F51B5"
            android:textSize="18sp" />
    </RelativeLayout>
</ScrollView>
